# sigil-hy

./: .gitignore  .semgrep.yml  pyproject.toml
src/apm/: __init__.py  ast.hy  constructors.hy  interp.hy  macros.hy  registry.hy
src/apm/algebras/: __init__.hy  product.hy
src/apm/stdlib/: __init__.hy  control.hy  effects.hy  run.hy  variants.hy
src/apm/stdlib/algebras/: cost.hy  deps.hy  execution.hy  identity.hy  type_alg.hy
src/prism/: __init__.py  constructors.hy  interp.hy  macros.hy  registry.hy
src/prism/algebras/: __init__.hy
src/prism/stdlib/: __init__.hy  control.hy  effects.hy  run.hy  variants.hy
src/prism/stdlib/algebras/: cost.hy  deps.hy  execution.hy  identity.hy  type_alg.hy
src/sigil/: __init__.py  constructors.hy
src/sigil/stdlib/: __init__.hy  run.hy
src/sigil/stdlib/algebras/: identity.hy
tests/: test_apm.py  test_sigil.py
