[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-hy"
version = "0.1.0"
description = "Free Applicative + Algebraic Effects DSL for Hy — pure-syntax macros, pluggable Algebra interpreters, optional doeff backend."
requires-python = ">=3.10"
dependencies = [
    "hy>=1.2.0",
]

# Install with `pip install prism-hy[doeff]` to enable the doeff bridge
# (ExecutionAlgebra, run-apm, DoeffEff usage). Core + non-doeff stdlib
# (Deps / Cost / Type / Identity / control / variants) work without it.
[project.optional-dependencies]
doeff = [
    "doeff>=0.2.0",
    "doeff-core-effects",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]
artifacts = ["**/*.hy"]

[tool.uv.sources]
doeff             = { path = "../doeff",                                editable = true }
doeff-core-effects = { path = "../doeff/packages/doeff-core-effects",   editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "doeff>=0.2.0",
    "doeff-core-effects",
]
