# sigil-hy workspace — ships two PyPI packages:
#   sigil-hy         (packages/sigil)         — leaf-agnostic core
#   sigil-experimental-hy  (packages/sigil-experimental)  — example leaves + algebras
#                                                + run-apm / variants / control
#
# This root pyproject.toml is uv-workspace metadata only — no source.
# To build & install both for development:  uv sync

[project]
name = "sigil-hy-workspace"
version = "0.0.0"
description = "Workspace root for the sigil-hy project."
requires-python = ">=3.10"
dependencies = [
    "sigil-hy",
    "sigil-experimental-hy",
]

[tool.uv.workspace]
members = ["packages/sigil", "packages/sigil-experimental"]

[tool.uv.sources]
sigil-hy           = { workspace = true }
sigil-experimental-hy    = { workspace = true }
doeff              = { path = "../doeff",                              editable = true }
doeff-core-effects = { path = "../doeff/packages/doeff-core-effects",  editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "doeff>=0.2.0",
    "doeff-core-effects",
]
